[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actiPy"
authors = [
    {name = "Angus Fisk", email = "angus_fisk@hotmail.com"},
    ]
version = "0.1.4"
description = "For analysing circadian activity data"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["circadian"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS"
    ]

[project.urls]
Homepage = "https://github.com/A-Fisk/actiPy"
Issues = "https://github.com/A-Fisk/actiPy/issues"
